--- a/spin-win-gold-cli/android/app/src/main/res/values/strings.xml
+++ b/spin-win-gold-cli/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Spin &amp; Win Gold</string>
+    <string name="app_name">Spin Wheel and Earn Money</string>
 </resources>
